--- a/package.json
+++ b/package.json
@@ -4,18 +4,37 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.11.6",
-    "@testing-library/react": "11.2.2",
-    "@testing-library/user-event": "12.3.0",
-    "immer": "^9.0.6",
-    "nth-check": "^2.0.1",
-    "postcss": "^8.4.31",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "^5.0.0",
-    "set-value": "^4.1.0",
-    "styled-components": "5.2.1",
-    "web-vitals": "0.2.4"
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "cra-template-typescript": "1.2.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
+    "immer": "^10.0.3",
+    "nodemon": "^3.1.0",
+    "normalize.css": "^8.0.1",
+    "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
+    "stylelint": "^16.2.1",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
+    "typescript": "^5.3.3",
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,12 +42,24 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "lint": "yarn lint:js && yarn lint:css && yarn lint:ts",
+    "lint:js": "eslint src --max-warnings 0",
+    "lint:css": "stylelint 'src/**/styles.ts' --allow-empty-input",
+    "lint:ts": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "6.1.1"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -42,8 +73,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "3.1.0"
   }
 }
